--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.16",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.170"
   }
 }
