--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,8 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/faker": "^5.5.6",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.15",
-    "@types/react": "^16.14.8",
-    "@types/react-dom": "^16.9.13",
-    "@types/react-redux": "^7.1.16",
+    "classnames": "^2.3.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -23,16 +16,16 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.6"
+    "typescript": "^4.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "lint": "eslint --fix \"src/*\"",
+    "format": "npm run prettier && npm run lint"
   },
   "browserslist": {
     "production": [
@@ -47,6 +40,24 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/faker": "^5.5.6",
+    "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^12.20.15",
+    "@types/react": "^16.14.8",
+    "@types/react-dom": "^16.9.13",
+    "@types/react-redux": "^7.1.16",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.3.1"
   }
 }
