--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,10 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.0",
+    "@types/react-swipeable-views": "^0.13.0",
+    "@types/react-swipeable-views-utils": "^0.13.2",
     "classnames": "^2.3.1",
+    "clsx": "^1.1.1",
     "eslint-import-resolver-typescript": "^2.4.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
@@ -16,6 +19,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "typescript": "^4.3.4"
   },
   "scripts": {
