--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@reduxjs/toolkit": "^1.6.0",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/react-swipeable-views": "^0.13.0",
-    "@types/react-swipeable-views-utils": "^0.13.2",
     "clsx": "^1.1.1",
-    "eslint-import-resolver-typescript": "^2.4.0",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
@@ -24,7 +20,6 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "redux-saga": "^1.1.3",
-    "typescript": "^4.3.5",
     "yup": "^0.32.9"
   },
   "scripts": {
@@ -34,7 +29,8 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"src/**/*.{ts,tsx}\"",
     "lint": "eslint --fix \"src/*\"",
-    "format": "npm run prettier && npm run lint"
+    "format": "npm run prettier && npm run lint",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -59,14 +55,20 @@
     "@types/react": "^16.14.9",
     "@types/react-dom": "^16.9.13",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/react-swipeable-views": "^0.13.1",
+    "@types/react-swipeable-views-utils": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "@typescript-eslint/parser": "^4.28.1",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "prettier": "^2.3.2"
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
   }
 }
